welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: too many arguments for method getCouleurSol: ()java.awt.Color
    if(getCouleurSol(c):Color) {
                    ^SlugSnail:4: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if(getCouleurSol(c):Color) {
                       ^