welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while (!estFaceMur) {
    if(getCouleurSol(c):Color) {
      avance() ;}
  else {
    recule()
    droite();}
  }

}

 // here comes your isFacingTrail method